<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    tools:context="elin.photogalleryapp.SearchActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Photogallery Application"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/title_search"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/search_fromDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_search"
        android:layout_alignEnd="@+id/title_search"
        android:layout_alignRight="@+id/title_search"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="YYYY-MM-DD"
        android:inputType="date" />

    <TextView
        android:text="From Date: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/search_fromDate"
        android:layout_alignLeft="@+id/title_search"
        android:layout_alignStart="@+id/title_search"
        android:layout_marginBottom="11dp"
        android:id="@+id/search_fromDateLabel" />

    <EditText
        android:id="@+id/search_toDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_fromDate"
        android:layout_alignEnd="@+id/search_fromDate"
        android:layout_alignRight="@+id/search_fromDate"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="YYYY-MM-DD"
        android:inputType="date" />

    <TextView
        android:text="To Date: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/search_toDate"
        android:layout_alignLeft="@+id/search_fromDateLabel"
        android:layout_alignStart="@+id/search_fromDateLabel"
        android:layout_marginTop="12dp"
        android:id="@+id/search_toDateLabel" />

    <EditText
        android:id="@+id/search_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_toDate"
        android:layout_alignEnd="@+id/search_toDate"
        android:layout_alignRight="@+id/search_toDate"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Caption"
        android:inputType="text" />

    <TextView
        android:id="@+id/search_captionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/search_toDateLabel"
        android:layout_alignLeft="@+id/search_toDateLabel"
        android:layout_alignTop="@+id/search_caption"
        android:layout_marginTop="13dp"
        android:text="Caption:" />

    <EditText
        android:id="@+id/search_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_caption"
        android:layout_alignEnd="@+id/search_caption"
        android:layout_alignRight="@+id/search_caption"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Latitude"
        android:inputType="numberSigned|numberDecimal" />

    <TextView
        android:id="@+id/search_latitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/search_captionLabel"
        android:layout_alignLeft="@+id/search_captionLabel"
        android:layout_alignTop="@+id/search_latitude"
        android:layout_marginTop="13dp"
        android:text="Latitude:" />

    <EditText
        android:id="@+id/search_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_latitude"
        android:layout_alignEnd="@+id/search_latitude"
        android:layout_alignRight="@+id/search_latitude"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Longitude"
        android:inputType="numberSigned|numberDecimal" />

    <TextView
        android:id="@+id/search_longitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/search_latitudeLabel"
        android:layout_alignLeft="@+id/search_latitudeLabel"
        android:layout_alignTop="@+id/search_longitude"
        android:layout_marginTop="13dp"
        android:text="Longitude:" />

    <Button
        android:text="Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/search_toDate"
        android:layout_alignEnd="@+id/search_toDate"
        android:layout_marginRight="55dp"
        android:layout_marginEnd="55dp"
        android:id="@+id/search_cancel"
        android:onClick="cancel" />

    <Button
        android:text="Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/search_toDateLabel"
        android:layout_toEndOf="@+id/search_toDateLabel"
        android:id="@+id/search_search"
        android:onClick="search" />



</RelativeLayout>
