...
        android:layout_marginLeft="17dp"
        android:layout_marginBottom="20dp"
        android:text="left" />


    <Button
        android:id="@+id/btnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnLeft"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="right" />

    <Button
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnCamera"
        android:layout_alignBottom="@+id/btnCamera"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
...
